name:          sd-mechanism
version:       0.1.0.0
synopsis:      Library implementing Snowdrift.coop's pledges and accounts.
description:   Please see README.md
homepage:      https://git.gnu.io/snowdrift/sd-mechanism
license:       AGPL-3
license-file:  LICENSE.md
author:        Bryan Richter and Snowdrift.coop
maintainer:    dev@lists.snowdrift.coop
category:      Finance, Crowdfunding
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://git.gnu.io/snowdrift/sd-mechanism.git

library
  hs-source-dirs:   src
  exposed-modules:  SDMechanism
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
