name:          sd-mechanism
version:       0.1.0.0
synopsis:      Library implementing Snowdrift.coop's pledges and accounts.
description:   Please see README.md
homepage:      https://git.gnu.io/snowdrift/sd-mechanism
license:       AGPL-3
license-file:  LICENSE.md
author:        Bryan Richter and Snowdrift.coop
maintainer:    dev@lists.snowdrift.coop
category:      Finance, Crowdfunding
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://git.gnu.io/snowdrift/sd-mechanism.git

library
    hs-source-dirs:   src
    exposed-modules:  SDMechanism
                      Types
                      Persist
    default-language: Haskell2010
    build-depends:    base >= 4.7 && < 5
                      , persistent >= 2.2.4
                      , persistent-template >= 2.1.5
                      , transformers >= 0.4.2.0
                      , mtl >= 2.2.1
                      , errors >= 2.1.1
                      , text >= 1.2.2.0
    ghc-options: -Wall
    default-extensions: LambdaCase

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:    Harness
                      Test.Tasty.Persist
    main-is:          test.hs
    ghc-options:      -Wall -threaded -with-rtsopts=-N
    build-depends:    base >= 4 && < 5
                    , tasty >= 0.10
                    , tasty-hunit
                    , sd-mechanism
                    , persistent >= 2.2.4
                    , transformers >= 0.4.2.0
                    , mtl >= 2.2.1
                    , monad-logger >= 0.3.17
                    , postgresql-simple >= 0.5.1.2
                    , persistent-postgresql >= 2.2.2
                    , resource-pool >= 0.2.3.2
